# TheosLearningApp

./: .gitignore  README.md  allauth-schema.yml  db.sqlite3  learning-dino-schema.yml  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  schema.yml  svelte.config.js
TheosLearningApp/: asgi.py  settings.py  urls.py  wsgi.py
content/: models.py
content/migrations/: 0001_initial.py  0002_alter_word_word.py  0003_language_pokemon_pokemonname.py  0004_language_language_full_name_and_more.py  0005_rename_language_full_name_language_full_name_and_more.py  0006_pokemon_content_pok_id_from_348066_idx.py  0007_pokemon_generation.py
data_sources/: dictionary-de2.xml  pokemon-names-translations.csv
dictionary_parser/: apps.py
german_words/: apps.py
german_words/services/: german_word_question_builder.py  word_to_learn_picker.py
learning/: apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
learning/migrations/: 0001_initial.py  0002_result_user.py  0003_remove_result_date_created_result_created_at.py  0004_learnedword.py  0005_invalidword_learnedword_unique_word_per_user_and_more.py  0006_alter_invalidword_word.py  0007_wronganswer.py  0008_learnedpokemonname_pokemonnameresult_and_more.py  0009_remove_learnedpokemonname_unique_learned_pokemon_per_user_and_more.py  0010_remove_pokemonnameresult_expected_language_and_more.py  0011_useroption.py  0012_enabledcontent_delete_useroption_and_more.py  0013_alter_pokemonnameresult_answer.py
learning/services/: WordLearnedChecker.py  WordToLearnPicker.py  content_options_provider.py  (+2 more)
pokemon_names/: apps.py  models.py  views.py
src/: app.html
(+177 files in other folders)
