[tool.poetry]
name = "theoslearningapp"
version = "0.1.0"
description = ""
authors = ["Thiéophile Madet <theo.madet@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
