[tool.poetry]
name = "theoslearningapp"
version = "0.1.0"
description = ""
authors = ["Théophile Madet <theo.madet@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
black = "^24.10.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
django-extensions = "^3.2.3"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
django-allauth = "^65.3.1"
django-environ = "^0.11.2"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
drf-spectacular = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
